--- a/ghost/admin/templates/application.hbs
+++ b/ghost/admin/templates/application.hbs
@@ -1,6 +1,6 @@
-{{#if isSignedIn}}
+{{#unless hideNav}}
     {{partial "navbar"}}
-{{/if}}
+{{/unless}}
 
 <main role="main" id="main">
     {{ghost-notifications}}
