--- a/core/client/templates/application.hbs
+++ b/core/client/templates/application.hbs
@@ -1,6 +1,6 @@
-{{#if isLoggedIn}}
+{{#unless hideNav}}
     {{partial "navbar"}}
-{{/if}}
+{{/unless}}
 
 <main role="main" id="main">
     {{ghost-notifications}}
