--- a/ghost/admin/templates/settings/apps.hbs
+++ b/ghost/admin/templates/settings/apps.hbs
@@ -1,9 +1,9 @@
-<header>
+<header class="fade-in">
     <button class="button-back">Back</button>
     <h2 class="title">Apps</h2>
 </header>
 
-<section class="content">
+<section class="content fade-in">
     <ul class="js-apps">
         {{#each availableApps}}
         <li>
