--- a/ghost/admin/templates/settings/debug.hbs
+++ b/ghost/admin/templates/settings/debug.hbs
@@ -1,7 +1,7 @@
-<header>
+<header class="fade-in">
     <h2 class="title">General</h2>
 </header>
-<section class="content">
+<section class="content fade-in">
     <form id="settings-export">
         <fieldset>
             <div class="form-group">
