--- a/ghost/admin/templates/settings/general.hbs
+++ b/ghost/admin/templates/settings/general.hbs
@@ -1,4 +1,4 @@
-<header>
+<header class="fade-in">
     <button class="button-back">Back</button>
     <h2 class="title">General</h2>
     <section class="page-actions">
@@ -6,7 +6,7 @@
     </section>
 </header>
 
-<section class="content">
+<section class="content fade-in">
     <form id="settings-general" novalidate="novalidate">
         <fieldset>
 
