--- a/ghost/admin/templates/-navbar.hbs
+++ b/ghost/admin/templates/-navbar.hbs
@@ -18,7 +18,7 @@
                 {{!-- @TODO: add functionality to allow for dropdown to work --}}
                 {{#ghost-popover open=showMenu}}
                     <ul class="overlay">
-                        <li class="usermenu-profile"><a href="#">Your Profile</a></li>
+                        <li class="usermenu-profile">{{#link-to 'settings.user'}}Your Profile{{/link-to}}</li>
                         <li class="divider"></li>
                         <li class="usermenu-help"><a href="http://ghost.org/forum/">Help / Support</a></li>
                         <li class="divider"></li>
