--- a/ghost/admin/templates/-publish-bar.hbs
+++ b/ghost/admin/templates/-publish-bar.hbs
@@ -15,15 +15,7 @@
                 {{view "post-settings-menu-view"}}
             </section>
 
-            <section id="entry-actions" class="js-publish-splitbutton splitbutton-save">
-                <button type="button" class="js-publish-button button-save">Save Draft</button>
-                <a class="options up" data-toggle="ul" href="#" title="Post Settings"><span class="hidden">Post Settings</span></a>
-                {{!-- @TODO: implement popover --}}
-                <ul class="editor-options overlay" style="display:none">
-                    <li data-set-status="published"><a href="#"></a></li>
-                    <li data-set-status="draft"><a href="#"></a></li>
-                </ul>
-            </section>
+            {{view "editor-save-button" id="entry-actions"}}
         </div>
     </nav>
 </footer>
