--- a/core/server/views/user-error.hbs
+++ b/core/server/views/user-error.hbs
@@ -32,6 +32,7 @@
           <section class="error-message">
             <h1 class="error-code">{{code}}</h1>
             <h2 class="error-description">{{message}}</h2>
+            <a href="{{@blog.url}}">Back to the home page.</a>
           </section>
         </section>
       </section>
