Infinite Scroll on Posts List
closes #2414
- Add PostsController with loadNextPage action
- Collect and store pagination info from PostsRoute into PostsController
- Use `store.filter` on PostsRoute model hook to auto-update posts list template as post models are added to the store
- Add content list view and use it to check for scroll event
- Make PostRoute only load a post that's already in the store, until we figure how to load multiple pages on refresh
- Add util function from clientold that concats error messages from server response

--- a/core/client/templates/posts.hbs
+++ b/core/client/templates/posts.hbs
@@ -6,7 +6,7 @@
             </section>
             {{#link-to "new" class="button button-add" title="New Post"}}<span class="hidden">New Post</span>{{/link-to}}
         </header>
-        <section class="content-list-content">
+        {{#view 'content-list-content-view' tagName="section"}}
             <ol class="posts-list">
                 {{#each itemController="posts/post" itemView="post-item-view" itemTagName="li"}}
                     {{!-- @TODO: Restore functionality where 'featured' and 'page' classes are added for proper posts --}}
@@ -30,7 +30,7 @@
                     {{/link-to}}
                 {{/each}}
             </ol>
-        </section>
+        {{/view}}
     </section>
     <section class="content-preview js-content-preview">
         {{outlet}}
