--- a/ghost/admin/templates/application.hbs
+++ b/ghost/admin/templates/application.hbs
@@ -3,8 +3,8 @@
 {{/unless}}
 
 <main role="main" id="main">
-    {{ghost-notifications}}
-    
+    {{gh-notifications}}
+
     {{outlet}}
 </main>
 {{outlet modal}}
