--- a/ghost/admin/app/components/gh-member-settings-form.hbs
+++ b/ghost/admin/app/components/gh-member-settings-form.hbs
@@ -79,7 +79,7 @@
                 />
             {{/if}}
 
-            {{#if this.membersUtils.paidMembersEnabled}}
+            {{#if this.settings.paidMembersEnabled}}
                 <h4 class="gh-main-section-header small bn">Subscriptions</h4>
 
                 {{#unless this.tiers}}
