--- a/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
@@ -1351,6 +1351,79 @@ img.kg-cta-image {
     font-weight: 500;
 }
 
+.kg-product-card {
+    margin: 0 0 1.5em;
+    padding: 20px;
+    border-radius: 5px;
+    border: 1px solid #e9e9e9;
+}
+
+.kg-product-image {
+    margin-bottom: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.kg-product-image img {
+    width: 100%;
+    height: auto;
+    padding-bottom: 16px;
+    border: none;
+}
+
+.kg-product-title {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+    font-size: 22px !important;
+    font-weight: 700;
+}
+
+.kg-product-rating {
+    margin-bottom: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.kg-product-rating img {
+    width: 96px;
+}
+
+.kg-product-description-wrapper {
+    margin-bottom: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.kg-product-description {
+    margin-bottom: -24px;
+    padding-top: 8px;
+    font-size: 17px;
+    line-height: 1.4;
+    opacity: 0.7;
+}
+
+.kg-product-button-wrapper {
+    margin-top: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.kg-product-button-wrapper .btn {
+    padding-top: 16px;
+}
+
+.kg-product-button-wrapper .btn a {
+    width: 100%;
+    padding: 0;
+    text-align: center;
+    color: #ffffff;
+}
+
+.kg-product-button-wrapper .btn a span {
+    display: block;
+    padding: 12px 25px;
+}
+
 .kg-audio-card {
     width: auto;
     width: 100%;
